--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!--Bootstrap -->
 
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-md nav-background">
 
         <div class="container">
             <a href="#" class="navbar-brand"><img src="image/logo.jpg" class="logo"></a>
@@ -18,7 +18,7 @@
               type="button" 
               data-bs-toggle="collapse" 
               data-bs-target="#navbarNav"
-              class="navbar-toggler"
+              class="navbar-toggler button-css"
               >
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,28 +46,6 @@
                  <h1>Hi, I'm <span>Mollalign Daniel</span><br>From Ethiopia</h1>
             </div>
         </div>
-   
-
-    <!--  -->
-    <!-- <div id="header">
-        <div class="container">
-            <nav>
-                <img src="image/logo.jpg" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li> -->
-                    <!-- <li><a href="#">Services</a></li>
-                    <li><a href="#">portfolio</a></li> -->
-                    <!-- <li><a href="#contact">Contacts</a></li>
-                </ul>
-            </nav>
-            <div class="header-text">
-                 <p>Front-end Developer</p>
-                 <h1>Hi, I'm <span>Mollalign Daniel</span><br>From Ethiopia</h1>
-            </div>
-        </div>
-    </div> -->
-
     
     <!--about me section-->
 
